--- a/default.walkline.yaml
+++ b/default.walkline.yaml
@@ -1,2 +1,3 @@
-url: postgres://user:password@localhost/usher?sslmode=disable
-flavor: postgresql
+url: postgres://user:password@localhost/database?sslmode=disable
+path: .
+verbose: false
